canvas rendering, quality bump, WerFault disguise, task manager pause